<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_background_color"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".registration.RegistrationActivity">

            <LinearLayout
                android:id="@+id/startingLayout"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeMessageTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/welcomeMessage"
                    android:textColor="@color/main_text_color"
                    android:textSize="30sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nicknameTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:textColorHint="@color/main_text_color">

                    <AutoCompleteTextView
                        android:id="@+id/username"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:focusedByDefault="false"
                        android:gravity="center"
                        android:hint="@string/username_hint"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/main_text_color"
                        android:textColorHint="@color/main_text_color" />

                </android.support.design.widget.TextInputLayout>


                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    app:mrl_rippleColor="@color/main_background_color"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/singup"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textColor="@color/black" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>